# docs

./: .gitignore  jornadas-demo.md  mkdocs.yml  product-brief.md  pyproject.toml
.github/workflows/: docs.yml
_legislacao/: README.md  decreto-11072-2022.md  in-conjunta-seges-sgprt-mgi-24-2023.md  in-conjunta-sgp-srt-seges-mgi-52-2023.md
_plan/: atualizacao-pactuacao-bilateral.md  docs-usuario.md  screenshots.md  secao-mobile.md
_projeto/: 01-requisitos-funcionais.md  02-modelo-dados-e-workflows.md  03-plano-implementacao.md  04-casos-de-teste.md  05-frontend-briefing.md
docs/: index.md
docs/chefia/: avaliar-registros.md  criar-plano-excecao.md  criar-plano.md  emitir-convocacao.md  minha-equipe.md  referencia-rapida.md  responder-recurso.md  revisar-plano.md  visao-geral.md
docs/conceitos/: glossario.md  pactuacao-bilateral.md  papeis.md  programa.md
docs/demo/: acesso.md  jornada-chefia.md  jornada-gestor.md  jornada-servidor.md
docs/gestor/: aprovar-planos.md  conformidade.md  dashboard.md  visao-geral.md
docs/servidor/: avaliacoes.md  contestar-avaliacao.md  criar-plano.md  meu-plano.md  referencia-rapida.md  registrar-execucao.md  revisar-plano.md  visao-geral.md
docs/sobre/: pgd-libre.md  requisitos-funcionais.md
