[tool.poetry]
name = "pgd-libre-docs"
version = "0.1.0"
description = "Documentação de usuário do PGD Libre"
authors = ["PGD Libre <pgdlibre@gestao.gov.br>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
